--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -1,4 +1,4 @@
-Шрифты
+// Шрифты
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=Sofia+Sans:wght@200;400;600;800&display=swap')
 
 // Цвета
@@ -15,7 +15,6 @@ $color-btn: #8761ff
 	margin: 0
 	padding: 0
 	color: $txt
-
 html 
 	font-size: 10px
 
@@ -25,7 +24,7 @@ body
 	overflow-y: hidden
 
 section
-	margin: 4rem auto
+	margin: 3rem auto
 
 .title
 	margin: 2rem auto
@@ -44,7 +43,7 @@ section
 	white-space: pre-wrap
 
 .txt
-	margin: 1rem 0 4rem 1rem
+	margin: 1rem 0 0 1rem
 	line-height: 2.4rem
 	font-size: 1.7rem
 	color: $txt-gray
@@ -200,16 +199,28 @@ hr
 		max-height: 25rem
 		object-fit: cover
 		border-radius: 3rem
+	&__post-block
+		margin: 2rem 0 5rem
+
+	&__post-img
+		border-radius: 5rem
+		min-width: 20rem
+		max-height: 22rem
+		object-fit: cover
 
 // Contacts
 .contacts
+	margin: 0
+	position: relative
 	&__title
-		margin: 3rem auto 2rem
+		margin: 4rem auto 1rem
 	&-block
 		display: flex
 		justify-content: space-around
 		align-items: center
-		margin-top: 2rem
+		margin: 2rem 0
+	&__block
+		min-height: 8rem
 	&__btn
 		display: inline-block
 		margin-top: 2.5rem
@@ -220,49 +231,35 @@ hr
 .map
 	position: absolute
 	right: 0
-	top: 13rem
+	top: 0
 	background-color: #ccc
 	width: 48%
-	height: 42rem
+	height: 100%
 	iframe
 		width: 100%
 		height: 100%
+
 
 .popup-btn
 	cursor: pointer
 
 // Секция инфо
 .info
+	position: relative
+	&::after
+		content: ''
+		background: url(../img/logo.png) no-repeat bottom right / cover
+		position: absolute
+		height: 45rem
+		width: 45rem
+		right: 0
+		bottom: -2rem
+		opacity: 0.4
+		z-index: -1
 	&__list-item
 		font-size: 1.8rem
 		margin: 1rem auto
-	// accardion
-	&__accordion
-		width: 90%
-		&-item_bg
-			border: 1px solid #000
-			background-color: $milk
-		&-header
-			padding-left: 3rem
-			font-size: 2rem
-			background-color: $milk
-			border: 2px double $txt-gray
-		&-body
-			margin: 0
-			font-size: 1.8rem
-			background-color: $milk
-.accordion-item
-			background-color: $milk
-.accordion-flush .accordion-item .accordion-button, .accordion-flush .accordion-item .accordion-button.collapsed
-		border-radius: 5rem
-		background-color: rgba($milk, 0.6)
-		color: $txt
-		outline: none
-		box-shadow: none
-		border-color: #000
-		.accordion-button, .accordion-button:focus, button:focus:not(:focus-visible)
-			outline: none
-			border: none
+
 
 // Футер
 .footer 
