--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -20,7 +20,7 @@ body {
 }
 
 section {
-  margin: 4rem auto;
+  margin: 3rem auto;
 }
 
 .title {
@@ -43,7 +43,7 @@ section {
 }
 
 .txt {
-  margin: 1rem 0 4rem 1rem;
+  margin: 1rem 0 0 1rem;
   line-height: 2.4rem;
   font-size: 1.7rem;
   color: #666;
@@ -251,9 +251,23 @@ hr {
      object-fit: cover;
   border-radius: 3rem;
 }
+.services__post-block {
+  margin: 2rem 0 5rem;
+}
+.services__post-img {
+  border-radius: 5rem;
+  min-width: 20rem;
+  max-height: 22rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
 
+.contacts {
+  margin: 0;
+  position: relative;
+}
 .contacts__title {
-  margin: 3rem auto 2rem;
+  margin: 4rem auto 1rem;
 }
 .contacts-block {
   display: -webkit-box;
@@ -264,7 +278,10 @@ hr {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 2rem;
+  margin: 2rem 0;
+}
+.contacts__block {
+  min-height: 8rem;
 }
 .contacts__btn {
   display: inline-block;
@@ -279,10 +296,10 @@ hr {
 .map {
   position: absolute;
   right: 0;
-  top: 13rem;
+  top: 0;
   background-color: #ccc;
   width: 48%;
-  height: 42rem;
+  height: 100%;
 }
 .map iframe {
   width: 100%;
@@ -293,45 +310,23 @@ hr {
   cursor: pointer;
 }
 
+.info {
+  position: relative;
+}
+.info::after {
+  content: "";
+  background: url(../img/logo.png) no-repeat bottom right/cover;
+  position: absolute;
+  height: 45rem;
+  width: 45rem;
+  right: 0;
+  bottom: -2rem;
+  opacity: 0.4;
+  z-index: -1;
+}
 .info__list-item {
   font-size: 1.8rem;
   margin: 1rem auto;
-}
-.info__accordion {
-  width: 90%;
-}
-.info__accordion-item_bg {
-  border: 1px solid #000;
-  background-color: #ffffed;
-}
-.info__accordion-header {
-  padding-left: 3rem;
-  font-size: 2rem;
-  background-color: #ffffed;
-  border: 2px double #666;
-}
-.info__accordion-body {
-  margin: 0;
-  font-size: 1.8rem;
-  background-color: #ffffed;
-}
-
-.accordion-item {
-  background-color: #ffffed;
-}
-
-.accordion-flush .accordion-item .accordion-button, .accordion-flush .accordion-item .accordion-button.collapsed {
-  border-radius: 5rem;
-  background-color: rgba(255, 255, 237, 0.6);
-  color: #000;
-  outline: none;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  border-color: #000;
-}
-.accordion-flush .accordion-item .accordion-button .accordion-button, .accordion-flush .accordion-item .accordion-button .accordion-button:focus, .accordion-flush .accordion-item .accordion-button button:focus:not(:focus-visible), .accordion-flush .accordion-item .accordion-button.collapsed .accordion-button, .accordion-flush .accordion-item .accordion-button.collapsed .accordion-button:focus, .accordion-flush .accordion-item .accordion-button.collapsed button:focus:not(:focus-visible) {
-  outline: none;
-  border: none;
 }
 
 .footer {
