--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -43,7 +43,7 @@ section {
 }
 
 .txt {
-  margin: 1rem 0 0 1rem;
+  margin-top: 1rem;
   line-height: 2.4rem;
   font-size: 1.7rem;
   color: #666;
