--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -43,7 +43,7 @@ section
 	white-space: pre-wrap
 
 .txt
-	margin: 1rem 0 0 1rem
+	margin-top: 1rem 
 	line-height: 2.4rem
 	font-size: 1.7rem
 	color: $txt-gray
