--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -162,6 +162,19 @@ hr
 	&-logo
 		&__img
 			width: 50rem
+
+// Слайдер главной
+.slick-slider
+	&__img
+		height: 50rem
+		width: 100%
+		object-fit: cover
+		border-bottom-left-radius: 5rem
+		border-top-left-radius: 5rem
+.slick-slider .slick-track, .slick-slider .slick-list
+		box-shadow: -6px 6px 15px $color-btn
+		border-bottom-left-radius: 5rem
+		border-top-left-radius: 5rem
 	
 // О нас
 .about
