--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -116,6 +116,12 @@ hr
 	border-top: 1px solid rgba($color-btn, 0.3)
 	border-right: 1px solid rgba($color-btn, 0.3)
 	border-top-right-radius: 5rem
+	&-list
+		&__item
+			margin: 2rem
+			margin-left: -1rem
+	&__link
+		font-size: 1.8rem
 	.main-link
 		&::after
 			bottom: -0.5rem
@@ -165,17 +171,15 @@ hr
 			width: 50rem
 
 // Слайдер главной
-.slick-slider
+.main-slider
 	&__img
 		height: 50rem
 		width: 100%
 		object-fit: cover
-		border-bottom-left-radius: 5rem
-		border-top-left-radius: 5rem
+		border-radius: 5rem
 .slick-slider .slick-track, .slick-slider .slick-list
-		box-shadow: -6px 6px 15px $color-btn
-		border-bottom-left-radius: 5rem
-		border-top-left-radius: 5rem
+	box-shadow: -6px 6px 15px $color-btn
+	border-radius: 5rem
 	
 // О нас
 .about
@@ -202,12 +206,6 @@ hr
 
 // Услуги
 .services
-	&-list
-		&-item
-			margin: 2rem
-			margin-left: -1rem
-	&__link
-		font-size: 1.8rem
 	&__img
 		width: 100%
 		max-height: 25rem
@@ -222,7 +220,42 @@ hr
 		max-height: 22rem
 		object-fit: cover
 
-// Contacts
+// Портфолио
+.portfolio
+	&-slider
+		&__img
+			height: 50rem
+			width: 100%
+			object-fit: cover
+			&-nav
+				display: flex
+				width: 100%
+				object-fit: cover
+				border-radius: 5rem
+		&_nav
+			height: 12rem
+			margin-top: 2rem
+	.slick-slider .slick-track, .slick-slider .slick-list
+		border-radius: 5rem
+
+// Секция инфо
+.info
+	position: relative
+	&::after
+		content: ''
+		background: url(../img/logo.png) no-repeat bottom right / cover
+		position: absolute
+		height: 45rem
+		width: 45rem
+		right: 0
+		bottom: -2rem
+		opacity: 0.4
+		z-index: -1
+	&__list-item
+		font-size: 1.8rem
+		margin: 1rem auto
+
+// Контакты
 .contacts
 	margin: 0
 	position: relative
@@ -252,28 +285,8 @@ hr
 	iframe
 		width: 100%
 		height: 100%
-
-
 .popup-btn
 	cursor: pointer
-
-// Секция инфо
-.info
-	position: relative
-	&::after
-		content: ''
-		background: url(../img/logo.png) no-repeat bottom right / cover
-		position: absolute
-		height: 45rem
-		width: 45rem
-		right: 0
-		bottom: -2rem
-		opacity: 0.4
-		z-index: -1
-	&__list-item
-		font-size: 1.8rem
-		margin: 1rem auto
-
 
 // Футер
 .footer 
