--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -271,7 +271,7 @@ hr {
 }
 .services__post-img {
   border-radius: 5rem;
-  min-width: 20rem;
+  min-width: 100%;
   max-height: 22rem;
   -o-object-fit: cover;
      object-fit: cover;
