--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -50,7 +50,6 @@ section
 	color: $txt-gray
 	white-space: pre-wrap
 
-
 a, a:focus, a:visited, a:hover
 	text-decoration: none
 
@@ -63,7 +62,6 @@ hr
 	margin: 0 auto
 #hr__down
 		width: 83%
-
 .fi
 	display: inline-block
 	margin-top: 0.5rem
@@ -79,6 +77,7 @@ hr
 		&-instagram
 			&:hover
 				color: #D980FA
+
 .main-link
 		position: relative
 		color: $txt
@@ -109,7 +108,9 @@ hr
 			color: $milk
 			background-color: $color-btn
 			border: 2px solid $color-btn
+
 .side-bar
+
 	position: fixed
 	margin-top: 5rem
 	padding: 1rem
@@ -133,11 +134,9 @@ hr
 .header 
 	display: flex
 	align-items: center
-
 .logo
 	&__img 
 		width: 8rem
-
 .social
 	display: flex
 	align-items: center
@@ -216,7 +215,7 @@ hr
 
 	&__post-img
 		border-radius: 5rem
-		min-width: 20rem
+		min-width: 100%
 		max-height: 22rem
 		object-fit: cover
 
