--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -137,11 +137,11 @@ hr {
   border-top-right-radius: 5rem;
 }
 .side-bar-list__item {
-  margin: 2rem;
+  margin: 2rem auto;
   margin-left: -1rem;
 }
 .side-bar__link {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
 }
 .side-bar .main-link::after {
   bottom: -0.5rem;
@@ -149,7 +149,12 @@ hr {
 
 .video {
   border-radius: 5rem;
+  height: 25rem;
   width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: bottom;
+     object-position: bottom;
 }
 
 .header {
