--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -110,7 +110,6 @@ hr
 			border: 2px solid $color-btn
 
 .side-bar
-
 	position: fixed
 	margin-top: 5rem
 	padding: 1rem
@@ -119,16 +118,19 @@ hr
 	border-top-right-radius: 5rem
 	&-list
 		&__item
-			margin: 2rem
+			margin: 2rem auto
 			margin-left: -1rem
 	&__link
-		font-size: 1.8rem
+		font-size: 1.6rem
 	.main-link
 		&::after
 			bottom: -0.5rem
 .video
 	border-radius: 5rem
+	height: 25rem
 	width: 100%
+	object-fit: cover
+	object-position: bottom
 
 // Header
 .header 
