--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -572,3 +572,57 @@ hr {
   margin-left: -2rem;
   color: #444;
 }
+
+@media (max-width: 991px) {
+  .main__header {
+    font-size: 3rem;
+  }
+  .main__subtitle {
+    font-size: 2rem;
+  }
+
+  .main-link {
+    font-size: 1.4rem;
+  }
+}
+@media (max-width: 767px) {
+  .main__header {
+    font-size: 2.6rem;
+  }
+  .main__subtitle {
+    margin-bottom: 3rem;
+    font-size: 1.6rem;
+  }
+
+  .main-link {
+    font-size: 1.2rem;
+  }
+
+  .footer-block::before {
+    right: 45%;
+  }
+  .footer-block::after {
+    left: 45%;
+  }
+}
+@media (max-width: 390px) {
+  .main-link {
+    font-size: 0.8rem;
+  }
+
+  .fi {
+    font-size: 2rem;
+  }
+
+  .footer-block {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .footer-block::before, .footer-block::after {
+    top: 18.5%;
+  }
+  .footer__txt {
+    margin-top: 1rem;
+  }
+}
