--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -241,15 +241,16 @@ hr {
 
 .about {
   position: relative;
+  overflow-x: hidden;
 }
 .about::after {
   content: "";
   background: url(../img/logo.png) no-repeat bottom right/cover;
   position: absolute;
-  height: 45rem;
-  width: 45rem;
-  right: 0;
-  bottom: -2rem;
+  height: 60rem;
+  width: 60rem;
+  right: -32rem;
+  bottom: 0rem;
   opacity: 0.4;
   z-index: -1;
 }
@@ -357,15 +358,16 @@ hr {
 
 .info {
   position: relative;
+  overflow-x: hidden;
 }
 .info::after {
   content: "";
   background: url(../img/logo.png) no-repeat bottom right/cover;
   position: absolute;
-  height: 45rem;
-  width: 45rem;
-  right: 0;
-  bottom: -2rem;
+  height: 60rem;
+  width: 60rem;
+  right: -32rem;
+  bottom: 0rem;
   opacity: 0.4;
   z-index: -1;
 }
@@ -573,6 +575,14 @@ hr {
   color: #444;
 }
 
+@media (max-width: 1199px) {
+  .contacts__block {
+    min-height: 9.5rem;
+  }
+  .contacts .map {
+    width: 44%;
+  }
+}
 @media (max-width: 991px) {
   .main__header {
     font-size: 3rem;
@@ -583,6 +593,10 @@ hr {
 
   .main-link {
     font-size: 1.4rem;
+  }
+
+  .contacts__block {
+    min-height: 11rem;
   }
 }
 @media (max-width: 767px) {
@@ -595,7 +609,26 @@ hr {
   }
 
   .main-link {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
+  }
+
+  .info::after {
+    background: none;
+  }
+  .info__list {
+    margin-bottom: 3rem;
+  }
+
+  .contacts {
+    text-align: center;
+  }
+  .contacts .map {
+    position: relative;
+    width: 100%;
+    height: 30rem;
+  }
+  .contacts .main-link_contacts .fi {
+    font-size: 3.6rem;
   }
 
   .footer-block::before {
@@ -605,9 +638,30 @@ hr {
     left: 45%;
   }
 }
+@media (max-width: 575px) {
+  .main-link {
+    font-size: 1rem;
+    font-weight: 600;
+  }
+  .main-link_info {
+    font-size: 1.4rem;
+  }
+
+  .about::after {
+    background: none;
+  }
+
+  .contacts .main-link_contacts .fi {
+    font-size: 3.2rem;
+  }
+}
 @media (max-width: 390px) {
   .main-link {
-    font-size: 0.8rem;
+    font-size: 0.9rem;
+    font-weight: 700;
+  }
+  .main-link_info {
+    font-size: 1.4rem;
   }
 
   .fi {
