--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -186,14 +186,15 @@ hr
 // О нас
 .about
 	position: relative
+	overflow-x: hidden
 	&::after
 		content: ''
 		background: url(../img/logo.png) no-repeat bottom right / cover
 		position: absolute
-		height: 45rem
-		width: 45rem
-		right: 0
-		bottom: -2rem
+		height: 60rem
+		width: 60rem
+		right: -32rem
+		bottom: 0rem
 		opacity: 0.4
 		z-index: -1
 	&__sub-title
@@ -278,14 +279,15 @@ hr
 // Секция инфо
 .info
 	position: relative
+	overflow-x: hidden
 	&::after
 		content: ''
 		background: url(../img/logo.png) no-repeat bottom right / cover
 		position: absolute
-		height: 45rem
-		width: 45rem
-		right: 0
-		bottom: -2rem
+		height: 60rem
+		width: 60rem
+		right: -32rem
+		bottom: 0rem
 		opacity: 0.4
 		z-index: -1
 	&__list-item
@@ -439,7 +441,11 @@ hr
 // Медиа запросы 
 // Экраны LG
 @media (max-width: 1199px)
-	
+	.contacts
+		&__block
+			min-height: 9.5rem
+		.map
+			width: 44%
 // Экраны MD
 @media (max-width: 991px)
 	.main
@@ -449,6 +455,9 @@ hr
 			font-size: 2rem
 	.main-link
 		font-size: 1.4rem
+	.contacts
+		&__block
+			min-height: 11rem
 // Экраны SM
 @media (max-width: 767px)
 	.main
@@ -458,20 +467,49 @@ hr
 			margin-bottom: 3rem
 			font-size: 1.6rem
 	.main-link
-		font-size: 1.2rem
+		font-size: 1.3rem
+	.info
+		&::after
+			background: none
+		&__list
+			margin-bottom: 3rem
+	.contacts
+		text-align: center
+		.map
+			position: relative
+			width: 100%
+			height: 30rem
+		.main-link_contacts
+			.fi
+				font-size: 3.6rem
 	.footer
 		&-block
 			&::before
 				right: 45%
 			&::after
 				left: 45%
+
 // Экраны XS
 @media (max-width: 575px)
-
+	.main-link
+		font-size: 1rem
+		font-weight: 600
+		&_info
+			font-size: 1.4rem
+	.about
+		&::after
+			background: none
+	.contacts
+		.main-link_contacts
+			.fi
+				font-size: 3.2rem
 // Экран айфон 12 про
 @media (max-width: 390px)
 	.main-link
-		font-size: 0.8rem
+		font-size: 0.9rem
+		font-weight: 700
+		&_info
+			font-size: 1.4rem
 	.fi
 		font-size: 2rem
 	.footer
@@ -482,4 +520,6 @@ hr
 				
 		&__txt
 			margin-top: 1rem
+
+
 
