--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -150,12 +150,20 @@ hr {
 
 .video {
   border-radius: 5rem;
-  height: 25rem;
-  width: 100%;
+  height: 50rem;
+  width: 50rem;
   -o-object-fit: cover;
      object-fit: cover;
-  -o-object-position: bottom;
-     object-position: bottom;
+  -webkit-box-shadow: -6px 6px 15px #8761ff;
+          box-shadow: -6px 6px 15px #8761ff;
+}
+.video-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .header {
@@ -226,14 +234,16 @@ hr {
 }
 
 .main-slider__img {
-  height: 50rem;
   width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 5rem;
 }
 
 .slick-slider .slick-track, .slick-slider .slick-list {
+  height: 50rem;
+  width: 50rem;
   -webkit-box-shadow: -6px 6px 15px #8761ff;
           box-shadow: -6px 6px 15px #8761ff;
   border-radius: 5rem;
@@ -272,40 +282,59 @@ hr {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 3rem;
+  -webkit-box-shadow: -6px 6px 15px #8761ff;
+          box-shadow: -6px 6px 15px #8761ff;
 }
 .services__post-block {
-  margin: 2rem 0 5rem;
+  margin: 0 0 5rem;
 }
 .services__post-img {
   border-radius: 5rem;
-  min-width: 100%;
-  max-height: 22rem;
+  width: 26rem;
+  height: 26rem;
   -o-object-fit: cover;
      object-fit: cover;
+  border: 1px solid #8761ff;
+  -webkit-box-shadow: -6px 6px 15px #8761ff;
+          box-shadow: -6px 6px 15px #8761ff;
 }
 
 .portfolio-slider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-bottom: 4rem;
 }
 .portfolio-slider__img {
-  height: 50rem;
+  height: 100%;
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
 .portfolio-slider__img-nav {
   margin: 0.5rem auto 0;
-  height: 11rem;
+  height: 9rem;
+  width: 9rem;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 3rem;
+  border: 1px solid #8761ff;
 }
 .portfolio-slider_nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 2rem auto 0;
-  width: 70%;
+  width: 65%;
 }
 .portfolio-slider_nav .slick-track, .portfolio-slider_nav .slick-list {
-  height: 12rem;
+  height: 10rem;
 }
 .portfolio .slick-slider .slick-track, .portfolio .slick-slider .slick-list {
   border-radius: 5rem;
@@ -329,7 +358,7 @@ hr {
   border: none;
   width: 3.5rem;
   height: 3.5rem;
-  bottom: -12rem;
+  bottom: -11rem;
   color: #8761ff;
   font-size: 2.2rem;
   border: 1px solid #8761ff;
@@ -344,10 +373,10 @@ hr {
   color: #ffffed;
 }
 .portfolio .next {
-  left: 6rem;
+  left: 9rem;
 }
 .portfolio .prev {
-  right: 6rem;
+  right: 9rem;
 }
 .portfolio .side-bar {
   margin-top: 0;
