--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -209,6 +209,19 @@ hr {
   text-align: center;
   font-size: 2.6rem;
 }
+.main::after {
+  content: "";
+  background: url(../img/logo.png) no-repeat bottom right/cover;
+  position: fixed;
+  height: 60rem;
+  width: 60rem;
+  left: -32rem;
+  bottom: 10rem;
+  -webkit-transform: scale(-1, 1);
+          transform: scale(-1, 1);
+  opacity: 0.4;
+  z-index: -1;
+}
 .main-wrapper {
   font-family: "Lobster", cursive;
   display: -webkit-box;
@@ -256,11 +269,11 @@ hr {
 .about::after {
   content: "";
   background: url(../img/logo.png) no-repeat bottom right/cover;
-  position: absolute;
+  position: fixed;
   height: 60rem;
   width: 60rem;
   right: -32rem;
-  bottom: 0rem;
+  bottom: 10rem;
   opacity: 0.4;
   z-index: -1;
 }
@@ -276,6 +289,17 @@ hr {
   margin: 1rem auto;
 }
 
+.services::after {
+  content: "";
+  background: url(../img/logo.png) no-repeat bottom right/cover;
+  position: fixed;
+  height: 60rem;
+  width: 60rem;
+  right: -32rem;
+  bottom: 10rem;
+  opacity: 0.4;
+  z-index: -1;
+}
 .services__img {
   width: 100%;
   max-height: 25rem;
@@ -299,6 +323,17 @@ hr {
           box-shadow: -6px 6px 15px #8761ff;
 }
 
+.portfolio::after {
+  content: "";
+  background: url(../img/logo.png) no-repeat bottom right/cover;
+  position: fixed;
+  height: 60rem;
+  width: 60rem;
+  right: -32rem;
+  bottom: 10rem;
+  opacity: 0.4;
+  z-index: -1;
+}
 .portfolio-slider {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -392,11 +427,11 @@ hr {
 .info::after {
   content: "";
   background: url(../img/logo.png) no-repeat bottom right/cover;
-  position: absolute;
+  position: fixed;
   height: 60rem;
   width: 60rem;
   right: -32rem;
-  bottom: 0rem;
+  bottom: 10rem;
   opacity: 0.4;
   z-index: -1;
 }
