--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -159,6 +159,17 @@ hr
 
 // Главная
 .main
+	&::after
+		content: ''
+		background: url(../img/logo.png) no-repeat bottom right / cover
+		position: fixed
+		height: 60rem
+		width: 60rem
+		left: -32rem
+		bottom: 10rem
+		transform: scale(-1, 1)
+		opacity: 0.4
+		z-index: -1
 	&-wrapper
 		font-family: 'Lobster', cursive
 		display: flex
@@ -195,11 +206,11 @@ hr
 	&::after
 		content: ''
 		background: url(../img/logo.png) no-repeat bottom right / cover
-		position: absolute
+		position: fixed
 		height: 60rem
 		width: 60rem
 		right: -32rem
-		bottom: 0rem
+		bottom: 10rem
 		opacity: 0.4
 		z-index: -1
 	&__sub-title
@@ -214,6 +225,16 @@ hr
 
 // Услуги
 .services
+	&::after
+		content: ''
+		background: url(../img/logo.png) no-repeat bottom right / cover
+		position: fixed
+		height: 60rem
+		width: 60rem
+		right: -32rem
+		bottom: 10rem
+		opacity: 0.4
+		z-index: -1
 	&__img
 		width: 100%
 		max-height: 25rem
@@ -233,6 +254,16 @@ hr
 
 // Портфолио
 .portfolio
+	&::after
+		content: ''
+		background: url(../img/logo.png) no-repeat bottom right / cover
+		position: fixed
+		height: 60rem
+		width: 60rem
+		right: -32rem
+		bottom: 10rem
+		opacity: 0.4
+		z-index: -1
 	&-slider
 		display: flex
 		justify-content: center
@@ -296,11 +327,11 @@ hr
 	&::after
 		content: ''
 		background: url(../img/logo.png) no-repeat bottom right / cover
-		position: absolute
+		position: fixed
 		height: 60rem
 		width: 60rem
 		right: -32rem
-		bottom: 0rem
+		bottom: 10rem
 		opacity: 0.4
 		z-index: -1
 	&__list-item
