--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -297,6 +297,9 @@ hr {
   margin: 1rem auto;
 }
 
+.services .title {
+  text-align: left;
+}
 .services::after {
   content: "";
   background: url(../img/logo.png) no-repeat bottom right/cover;
@@ -319,6 +322,7 @@ hr {
 }
 .services__post-block {
   margin: 0 0 5rem;
+  text-align: center;
 }
 .services__post-img {
   border-radius: 5rem;
@@ -648,6 +652,11 @@ hr {
 }
 
 @media (max-width: 1199px) {
+  .services__post-img {
+    width: 20rem;
+    height: 20rem;
+  }
+
   .contacts__block {
     min-height: 9.5rem;
   }
@@ -672,6 +681,16 @@ hr {
     width: 39rem;
   }
 
+  .services__post-img {
+    width: 13rem;
+    height: 13rem;
+  }
+
+  .video {
+    height: 40rem;
+    width: 40rem;
+  }
+
   .contacts__block {
     min-height: 11rem;
   }
@@ -690,6 +709,28 @@ hr {
 
   .main-link {
     font-size: 1.3rem;
+  }
+
+  .about::after, .portfolio::after, .services::after {
+    background: none;
+  }
+
+  .services .title {
+    text-align: center;
+  }
+  .services__post-img {
+    width: 14rem;
+    height: 14rem;
+  }
+
+  .side-bar {
+    position: relative;
+    margin: 2rem auto;
+    padding: 0;
+    width: 70%;
+    text-align: center;
+    border: 1px solid rgba(135, 97, 255, 0.3);
+    border-radius: 5rem;
   }
 
   .info::after {
@@ -736,11 +777,22 @@ hr {
     background: none;
   }
 
+  .services__post-img {
+    margin-bottom: 2rem;
+    width: 19rem;
+    height: 19rem;
+  }
+
   .contacts .main-link_contacts .fi {
     font-size: 3.2rem;
   }
 }
 @media (max-width: 390px) {
+  .video {
+    width: 30rem;
+    height: 30rem;
+  }
+
   .main-link {
     font-size: 0.9rem;
     font-weight: 700;
