--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -788,6 +788,10 @@ hr {
   }
 }
 @media (max-width: 390px) {
+  .services .txt {
+    font-size: 1.3rem;
+  }
+
   .video {
     width: 30rem;
     height: 30rem;
