--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -598,6 +598,8 @@ hr
 // Экран айфон 12 про
 @media (max-width: 390px)
 	.services
+		.txt
+			font-size: 1.3rem
 	.video
 		width: 30rem
 		height: 30rem
