--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -587,6 +587,8 @@ hr
 		&::after
 			background: none
 	.services
+		&__post-block
+			margin: 0
 		&__post-img
 			margin-bottom: 2rem
 			width: 19rem
