--- a/vishivka/sass/style.sass
+++ b/vishivka/sass/style.sass
@@ -15,6 +15,7 @@ $color-btn: #8761ff
 	margin: 0
 	padding: 0
 	color: $txt
+
 html 
 	font-size: 10px
 
@@ -397,8 +398,6 @@ hr
 		color: $txt
 		font-size: 1.2rem
 		text-align: center
-		&:last-child
-			text-align: right
 	&-block
 		display: flex
 		justify-content: space-evenly
@@ -407,7 +406,7 @@ hr
 			height: 0.1rem
 			width: 40%
 			position: absolute
-			top: 25%
+			top: 29%
 			background-color: rgba(0, 0, 0, 0.3)
 		&::before
 			right: 38%
@@ -415,7 +414,6 @@ hr
 		&::after
 			left: 38%
 			transform: translateX(50%)
-
 
 
 
@@ -570,6 +568,8 @@ hr
 			font-size: 1.6rem
 	.main-link
 		font-size: 1.3rem
+		&::after
+			bottom: -1.35rem
 	.about, .portfolio, .services
 		&::after
 			background: none
@@ -610,6 +610,8 @@ hr
 				margin-top: 1rem
 				text-align: center
 		&-block
+			&::before, &::after
+				top: 4rem
 			&::before
 				right: 45%
 			&::after
@@ -620,6 +622,8 @@ hr
 	.main-link
 		font-size: 1rem
 		font-weight: 600
+		&::after
+			bottom: -1.33rem
 		&_info
 			font-size: 1.4rem
 	.slick-slider .slick-track, .slick-slider .slick-list
@@ -666,7 +670,7 @@ hr
 		font-size: 0.9rem
 		font-weight: 700
 		&::after
-			bottom: -1.35rem
+			bottom: -1.3rem
 		&_info
 			font-size: 1.4rem
 	.slick-slider .slick-track, .slick-slider .slick-list
@@ -703,6 +707,7 @@ hr
 			width: 30rem
 		&-header
 			font-size: 2rem
+
 
 
 
