--- a/Stellar/less/style.less
+++ b/Stellar/less/style.less
@@ -1004,18 +1004,17 @@
 				.contacts-txt {
 					font-size: 2rem;
 				}
-				margin-bottom: 31.4rem;
 				.map {
+					position: relative;
 					width: 100%;
-					height: 33rem;
-					top: 100%;
+					height: 35rem;
 					iframe {
 						border-top-left-radius: 0;
 					}
 				}
 			}
 			.footer {
-				padding-top: 3rem;
+				// padding-top: 3rem;
 			}
 		}
 
@@ -1069,11 +1068,6 @@
 				&-years {
 					font-size: 1.8rem;
 
-				}
-			}
-			.contacts{
-				.map {
-					top: 100%;
 				}
 			}
 			.footer {
@@ -1147,9 +1141,6 @@
 					}
 				} 
 				.map {
-					top: 100%;
-					width: 100%;
-					height: 35rem;
 					iframe {
 						border-top-left-radius: 0;
 					}
@@ -1160,40 +1151,5 @@
 			}
 			.footer {
 				text-align: center;
-				padding-top: 5rem;
 			}
 		}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
