--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -549,6 +549,33 @@ hr {
           transform: translateX(50%);
 }
 
+.thx {
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.thx::after {
+  content: "";
+  background: url(../img/logo.png) no-repeat bottom right/cover;
+  position: fixed;
+  height: 60rem;
+  width: 60rem;
+  left: -32rem;
+  bottom: 16%;
+  -webkit-transform: scale(-1, 1);
+          transform: scale(-1, 1);
+  opacity: 0.4;
+  z-index: -1;
+}
+
 .popup {
   display: none;
   position: fixed;
@@ -802,6 +829,10 @@ hr {
   }
   .footer-block::after {
     left: 45%;
+  }
+
+  .thx::after {
+    display: none;
   }
 }
 @media (max-width: 575px) {
