--- a/vishivka/css/style.css
+++ b/vishivka/css/style.css
@@ -550,7 +550,7 @@ hr {
 }
 
 .thx {
-  height: 100vh;
+  height: 70vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -561,6 +561,15 @@ hr {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.thx .title_thx {
+  font-family: "Lobster", cursive;
+  font-size: 3.5rem;
+  margin-bottom: 1.6rem;
+  text-align: center;
 }
 .thx::after {
   content: "";
@@ -572,7 +581,7 @@ hr {
   bottom: 16%;
   -webkit-transform: scale(-1, 1);
           transform: scale(-1, 1);
-  opacity: 0.4;
+  opacity: 1;
   z-index: -1;
 }
 
