--- a/Stellar/less/style.less
+++ b/Stellar/less/style.less
@@ -16,6 +16,7 @@
 	body {
 		font-family: 'Sofia Sans', sans-serif;
 		color: @color-txt;
+		overflow-x: hidden;
 	}
 	a, a:hover, a:focus, a:visited {
 		text-decoration: none;
