--- a/garant/css/style.css
+++ b/garant/css/style.css
@@ -100,6 +100,20 @@ ul {
   text-align: center;
   border-bottom-left-radius: 5rem;
 }
+.wrap-bg_l {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 4rem;
+  padding: 0.5rem;
+  background: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+  text-align: center;
+  border-bottom-right-radius: 5rem;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
 
 .section-header {
   padding: 10rem 0 5rem 0;
@@ -166,49 +180,58 @@ ul {
 .nav {
   display: block;
   position: relative;
-  top: -3rem;
-  left: -3rem;
-  height: 7rem;
-  width: 7rem;
-  background: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
-  border-radius: 50%;
+  top: 0rem;
+  left: 0rem;
+  width: 12rem;
+  border-bottom-right-radius: 50%;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.nav__h4 {
+  position: absolute;
+  top: 0rem;
+  left: 3rem;
+  font-size: 1.8rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
 .nav__btn {
-  display: block;
   position: relative;
-  top: 0rem;
+  top: 0.3rem;
   left: 0rem;
-  height: 7rem;
-  width: 7rem;
-  border-radius: 50%;
+  height: 3rem;
+  width: 9rem;
+  border-radius: 20%;
   z-index: 2;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   cursor: pointer;
 }
 .nav__btn_active {
-  height: 3rem;
-  width: 3rem;
   top: 2.5rem;
-  left: 31.5rem;
+  left: 15.5rem;
+}
+.nav__btn_active .nav__h4 {
+  top: -1.7rem;
+  left: -4rem;
 }
 .nav_active {
   border-radius: 0;
-  height: 50vh;
-  width: 25vw;
+  height: 30rem;
+  width: 30rem;
   border-bottom-right-radius: 50%;
 }
+.nav_active .wrap-bg_l {
+  height: 30rem;
+}
 .nav__span {
-  display: block;
+  display: inline-block;
   position: absolute;
-  margin: -0.1rem 0 0 -0.8rem;
   width: 1.2rem;
   height: 0.2rem;
   background-color: #09203f;
-  top: 4.4rem;
-  left: 4.4rem;
+  top: 1rem;
+  left: 0rem;
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
@@ -229,7 +252,7 @@ ul {
   top: 0.5rem;
 }
 .nav__span_active {
-  top: 2rem;
+  top: -0.6rem;
   left: 1.7rem;
   background: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
 }
@@ -249,8 +272,8 @@ ul {
 }
 .nav-list {
   position: absolute;
-  top: 25%;
-  left: 8%;
+  top: 16%;
+  left: 6%;
 }
 .nav-link {
   display: inline-block;
@@ -261,8 +284,8 @@ ul {
   font-size: 2rem;
   -webkit-transform: translate(-60rem, -30rem);
           transform: translate(-60rem, -30rem);
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+  -webkit-transition: 0.7s;
+  transition: 0.7s;
   opacity: 0;
 }
 .nav-link:hover {
@@ -495,6 +518,47 @@ ul {
 }
 .footer__p {
   text-align: center;
+}
+
+.btn-close {
+  position: absolute;
+  right: -2rem;
+  top: 1rem;
+  color: #fff;
+}
+
+.modal-body {
+  margin: 0;
+  padding: 0;
+}
+
+.enter-form {
+  padding: 8rem 2rem;
+  height: 100%;
+}
+.enter-label {
+  font-size: 1.6rem;
+}
+.enter-input {
+  display: block;
+  width: 75%;
+  margin: 1rem auto 3rem;
+}
+.enter-btn {
+  display: inline-block;
+  margin: auto;
+  margin: 1rem 0.5rem 2rem;
+}
+.enter-description {
+  background: #09203f;
+  height: 100%;
+  width: 100%;
+}
+
+.reg-input {
+  display: block;
+  width: 75%;
+  margin: 1rem auto;
 }
 
 /*# sourceMappingURL=style.css.map */
