--- a/garant/sass/style.sass
+++ b/garant/sass/style.sass
@@ -2,27 +2,27 @@
 @keyframes lights 
 	0% 
 		color: #09203f
-		text-shadow: 0 0 1em hsla(229, 1%, 1%, 0.2), 0 0 0.125em hsla(229, 1%, 1%, 0.3), -1em -0.125em 0.5em hsla(229, 1%, 1%, 0), 1em 0.125em 0.5em hsla(229, 1%,1%, 0)
+		text-shadow: 0 0 1em hsla(229, 0%, 100%, 0.2), 0 0 0.125em hsla(229, 1%, 1%, 0.3), -1em -0.125em 0.5em hsla(229, 1%, 1%, 0), 1em 0.125em 0.5em hsla(229, 1%,1%, 0)
 
 
 	30%  
 		color: #09203f
-		text-shadow: 0 0 1em hsla(229, 1%, 1%, 0.5), 0 0 0.125em hsla(229, 1%, 1%, 0.5), -0.5em -0.125em 0.25em hsla(229, 1%, 1%, 0.2), 0.5em 0.125em 0.25em hsla(229, 1%,1%, 0.4)
+		text-shadow: 0 0 1em hsla(229, 1%, 100%, 0.8), 0 0 0.125em hsla(229, 1%, 1%, 0.5), -0.5em -0.125em 0.25em hsla(229, 1%, 1%, 0.2), 0.5em 0.125em 0.25em hsla(229, 1%,1%, 0.4)
 
 
 	40% 
 		color: #09203f
-		text-shadow: 0 0 1em hsla(229, 1%, 1%, 0.5), 0 0 0.125em hsla(229, 1%, 1%, 0.5), -0.25em -0.125em 0.125em hsla(229, 1%, 1%, 0.2), 0.25em 0.125em 0.125em hsla(229, 1%,1%, 0.4)
+		text-shadow: 0 0 1em hsla(229, 1%, 100%, 0.8), 0 0 0.125em hsla(229, 1%, 1%, 0.5), -0.25em -0.125em 0.125em hsla(229, 1%, 1%, 0.2), 0.25em 0.125em 0.125em hsla(229, 1%,1%, 0.4)
 
 
 	70% 
 		color: #09203f
-		text-shadow: 0 0 1em hsla(229, 1%, 1%, 0.5), 0 0 0.125em hsla(229, 1%, 1%, 0.5), 0.5em -0.125em 0.25em hsla(229, 1%, 1%, 0.2), -0.5em 0.125em 0.25em hsla(229, 1%,1%, 0.4)
+		text-shadow: 0 0 1em hsla(229, 1%, 100%, 0.8), 0 0 0.125em hsla(229, 1%, 1%, 0.5), 0.5em -0.125em 0.25em hsla(229, 1%, 1%, 0.2), -0.5em 0.125em 0.25em hsla(229, 1%,1%, 0.4)
 
 
 	100% 
 		color: #09203f
-		text-shadow: 0 0 1em hsla(229, 1%, 1%, 0.2), 0 0 0.125em hsla(229, 1%, 1%, 0.3), 1em -0.125em 0.5em hsla(229, 1%, 1%, 0), -1em 0.125em 0.5em hsla(229, 1%,1%, 0)
+		text-shadow: 0 0 1em hsla(229, 1%, 100%, 0.2), 0 0 0.125em hsla(229, 1%, 1%, 0.3), 1em -0.125em 0.5em hsla(229, 1%, 1%, 0), -1em 0.125em 0.5em hsla(229, 1%,1%, 0)
  
 
 // Цвета 
@@ -31,9 +31,6 @@ $color-txt: #09203f
 $color-bg: #f0f0f0
 
 
-
-.red
-	color: red
 
 
 // Общие свойства
@@ -99,11 +96,7 @@ ul
 		animation: lights 5s 750ms linear infinite
 .sub-title
 	line-height: 1.8
-	font-size: 2rem
-.description
-	padding: 3rem 
-	text-align: center
-	font-size: 2rem
+	font-size: 3.5rem
 
 .form
 	text-align: center
@@ -122,7 +115,8 @@ ul
 		transition: all 0.5s
 		&:hover
 			background: #fda085
-
+.txt-str
+	color: lighten($color-txt, 50%)
 // Слйдер
 .slick-prev:before, .slick-next:before 
 	color: $color-txt
@@ -142,7 +136,6 @@ ul
 	top: 0rem
 	left: 0rem
 	width: 12rem
-	// background: $color-act
 	border-bottom-right-radius: 50%
 	transition: 0.5s
 	&__h4
@@ -165,7 +158,7 @@ ul
 			top: 2.5rem
 			left: 15.5rem
 			.nav__h4
-				top: -1.7rem
+				top: -2rem
 				left: -4rem
 	&_active
 		border-radius: 0
@@ -196,7 +189,7 @@ ul
 		&::before
 			top: 0.5rem
 		&_active
-			top: -.6rem
+			top: -1rem
 			left: 1.7rem
 			background: $color-act
 			&::after
@@ -273,7 +266,7 @@ ul
 .main
 	margin: -1rem	auto	
 	width: 100%
-	height: 100vh
+	height: 67rem
 	background: url('../img/main-bg_o.png') no-repeat center / cover
 	.section-header
 		padding: 20rem 0 10rem
@@ -287,6 +280,8 @@ ul
 // Вторая секция about
 .about
 	background-color: $color-bg
+	&__sub-title
+		font-size: 2rem
 	&__form
 		margin-bottom: 8rem
 	&__input
@@ -304,7 +299,10 @@ ul
 	&__name
 		margin-top: 2rem
 		font-size: 3rem
-
+	&__description
+		padding: 3rem 
+		text-align: center
+		font-size: 2rem
 // Третья секция ads
 .ads
 	min-height: 100vh
@@ -352,7 +350,13 @@ ul
 		transition: .5s
 		transform: translateY(7rem)			
 
-
+// Четвертая секция description
+.description
+	&__txt
+		margin-bottom: 3rem
+		font-size: 2rem
+		line-height: 1.6
+		text-align: justify
 
 
 
@@ -397,16 +401,24 @@ ul
 	position: absolute
 	right: -2rem
 	top: 1rem
-	color: #fff
+	opacity: 1
+	filter: invert(100%)
 .modal
 	&-body
 		margin: 0
 		padding: 0
+		background-color: $color-bg
+		border-radius: 20%
 	&-content
+		border-radius: 20%
+// Форма входа
 .enter
+
 	&-form
+		background-color: $color-bg
 		padding: 8rem 2rem
 		height: 100%
+		border-radius: 20%
 	&-label
 		font-size: 1.6rem
 	&-input
@@ -418,10 +430,29 @@ ul
 		display: inline-block
 		margin: auto
 		margin: 1rem .5rem 2rem
+		transition: .5s
+		&_reg
+
 	&-description
+		border-top-right-radius: 20%
+		border-bottom-right-radius: 20%
 		background: $color-txt
+		color: $color-bg
 		height: 100%
 		width: 100%
+		&_reg
+			text-align: left
+			border-top-right-radius: 0%
+			border-bottom-right-radius: 0%
+			border-top-left-radius: 20%
+			border-bottom-left-radius: 20%
+	&__title
+		padding: 7rem 2rem 3rem
+		text-align: right
+	&__sub-title
+		text-align: center
+		&_reg
+			text-align: center
 .reg
 	&-input
 		display: block
